--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'androidx.navigation.safeargs.kotlin'
+    id 'androidx.navigation.safeargs'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id("com.google.dagger.hilt.android")
@@ -32,6 +32,9 @@ android {
 
     buildFeatures {
         dataBinding true
+    }
+
+    buildFeatures {
         viewBinding true
     }
     compileOptions {
