--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
 
 
     <application
@@ -17,6 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DistanceTrackerApp"
         tools:targetApi="31">
+
+        <service android:name=".service.TrackerService"
+            android:foregroundServiceType="location"
+            android:exported="false"/>
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
